[package]
name = "zakros-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = "1.4.0"
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.186", features = ["derive"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = [
	"fs",
	"io-util",
	"macros",
	"parking_lot",
	"rt",
	"time",
] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"
