[package]
name = "zakros-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
bincode = "1.3.3"
byteorder = "1.5.0"
bytes = "1.5.0"
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = [
	"fs",
	"io-util",
	"macros",
	"parking_lot",
	"rt",
	"time",
] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tracing = "0.1.39"
