[package]
name = "zakros-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
bytes = "1.5.0"
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = [
	"fs",
	"io-util",
	"macros",
	"parking_lot",
	"rt",
	"time",
] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
