[package]
name = "zakros-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
bstr = { version = "1.7.0", default-features = false }
bytes = { version = "1.5.0", features = ["serde"] }
futures = { version = "0.3.28", default-features = false }
parking_lot = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7.9", features = ["codec"] }

[dev-dependencies]
rand_xoshiro = "0.6.0"
