[package]
name = "zakros-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
bstr = { version = "1.8.0", default-features = false }
bytes = { version = "1.5.0", features = ["serde"] }
futures = { version = "0.3.30", default-features = false }
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", default-features = false, features = ["rt"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
rand_xoshiro = "0.6.0"
