[package]
name = "zakros"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
bstr = { version = "1.6.0", default-features = false }
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.3.22", features = ["derive"] }
futures = { version = "0.3.28", default-features = false }
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
tarpc = { version = "0.33.0", features = [
	"serde-transport",
	"serde-transport-bincode",
] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = [
	"net",
	"parking_lot",
	"rt-multi-thread",
] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["parking_lot"] }
zakros-raft = { path = "../zakros-raft" }
zakros-redis = { path = "../zakros-redis" }
