[package]
name = "zakros"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bstr = { version = "1.7.0", default-features = false, features = ["std"] }
bytes = { version = "1.5.0", features = ["serde"] }
futures = { version = "0.3.28", default-features = false }
num_cpus = "1.16.0"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
tarpc = { version = "0.33.0", features = [
	"serde-transport",
	"serde-transport-bincode",
] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = [
	"net",
	"parking_lot",
	"rt-multi-thread",
] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = [
	"parking_lot",
	"env-filter",
] }
zakros-raft = { path = "../zakros-raft" }
zakros-redis = { path = "../zakros-redis" }
